fix math/PowerSet: Version change